xorg-server (2:1.18.2-1ubuntu1) UNRELEASED; urgency=medium

  * Merge from Debian.
  * fix-xineramaqueryscreens-for-reverse-prime.diff,
    glamor-factor-out-glamor-set-color.diff,
    glamor-source-pictures-are-always-depth-32.diff:
    Deleted, upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Sat, 12 Mar 2016 08:59:43 +0200

xorg-server (2:1.18.2-1) unstable; urgency=medium

  * New upstream release. (Closes: #814982)

 -- Timo Aaltonen <tjaalton@debian.org>  Sat, 12 Mar 2016 08:49:55 +0200

xorg-server (2:1.18.1-1ubuntu4) xenial; urgency=medium

  * glamor: Fix font rendering issue. (LP: #1555960)

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 11 Mar 2016 09:36:40 +0200

xorg-server (2:1.18.1-1ubuntu3) xenial; urgency=medium

  * Merge xmir changes from 2:1.17.3-2ubuntu4.
  * fix-xineramaqueryscreens-for-reverse-prime.diff: Fix unity-greeter
    crash with nvidia prime.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Feb 2016 11:49:23 +0200

xorg-server (2:1.18.1-1ubuntu2) xenial; urgency=medium

  * Merge xmir changes from 2:1.17.3-2ubuntu3.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 16 Feb 2016 10:02:03 +0200

xorg-server (2:1.18.1-1ubuntu1) xenial; urgency=medium

  * Merge from Debian experimental
  * patches: Refreshed, dropped what's upstream.
  * xmir-fixes.diff: Port xmir to 1.18.
  * fix-ftbfs-ppc64el.patch: Dropped, not needed anymore.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 08 Dec 2015 19:47:06 +0200

xorg-server (2:1.18.1-1) unstable; urgency=medium

  * New upstream release.
  * add_support_new_libsystemd.patch,
    glamor-disable-debugging-msgs.diff,
    update-intel-pciids.diff:
    - dropped, upstream

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 09 Feb 2016 10:27:18 +0200

xorg-server (2:1.18.0-3) unstable; urgency=medium

  * update-intel-pciids.diff: Sync dri2 mapping ids for intel.
  * glamor-disable-debugging-msgs.diff: Make glamor less noisy with
    recent mesa.
